--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse mx-auto" id="navbarNav">
+                  <div class="collapse navbar-collapse mx-3" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item px-3 navbarResponsivePadding">
                         <a class="nav-link nav-header active" aria-current="page" href="#">Home</a>
