--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Porfolio</title>
+    <title>Portfolio</title>
+    <link rel="shortcut icon" href="../resources/favicon.png" type="image/x-icon" width="100%">
     <script src="https://kit.fontawesome.com/59d377ced1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="../resources/favicon.png" type="image/x-icon"> 
